
The 3DsMax X-Plane Obj Exporter change-log.
===============================================================================
2.2.0 (10.07.2017)

- Modified: By default all the manipulators are disabled now! 
            Previous behaviour was: the 'panel' manipulator was implicitly set 
            when you added any cockpit attribute like ATTR_cockpit.

- Added: Panel-Click manipulator. This manipulator should be used for 
         the cockpit geometry (ATTR_cockpit) when 
         you want to enable the panel manipulators.	 
- Added: Checking if opening scene was created with a newer plugin version.
         If so then the scene will not be loaded and a warning will be printed.
- Added: 'Smoke' object. It can be found near 'X-Obj' and 'X-Lod'.
- Added: 'X-Plane' menu on the 3Ds Max's top menu bar.
- Added: Documentation in the separated repository. Use the 'X-Plane' menu to get it.

- Fixed: Log file creation for some 3d max versions.
- Fixed: Manipulators' state machine. There were some problems in the state machine 
         one of them could lead to undefined behavior, it was fixed.

===============================================================================
2.1.0 (16.05.2017)

- Added: '(U) Update' buttons for the animation rollups, 
         allows you to re-synchronize animation keys and values.
- Added: Tooltips for the some controls of the export window.
- Added: Ability to enable or disable 'X-Obj' export. 
         It helps when you work with more than one 'X-Obj' in the scene. 
		 You can export only selected ones.
- Added: Checkbox for enabling auto-export. 
         If it is enabled then the export will be auto-started 
		 without pressing the 'Export' button.

- Fixed: Link to donate. The button 'donate' leads to the correct web page now.
- Fixed: Loop animation attribute printing.

===============================================================================
2.0.2-beta (23.04.2017)
