@@ -581,7 +581,7 @@ BEGIN
     PUSHBUTTON      "Donate",BTN_DONATE,128,10,66,18
     PUSHBUTTON      "Check for Update",BTN_CHECK_FOR_UPDATE,200,10,66,18
     CTEXT           "Static",LBL_VERSION,344,13,96,12
-    EDITTEXT        USER_OUPUT,137,42,438,242,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_HSCROLL
+    EDITTEXT        USER_OUPUT,137,42,438,242,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     PUSHBUTTON      "About",BTN_ABOUT,272,10,66,18
     GROUPBOX        "Log console",IDC_STATIC,128,29,455,282
     PUSHBUTTON      "Save Log",BTN_SAVE_LOG,509,288,66,18
