@@ -1,6 +1,11 @@
 
 The 3DsMax X-Plane Obj Exporter change-log.
 ===============================================================================
+Next
+
+- Fixed: Vertical scroll bar on the export console.
+		 
+===============================================================================
 2.2.0 (10.07.2017)
 
 - Modified: By default all the manipulators are disabled now! 
